fixed bug in shopping cart items with different component z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,7 @@
     padding: 0 20px;
   }
 }
+
+app-shoping-card-items {
+  z-index: 1000 !important;
+}
