--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -72,7 +72,7 @@ ul {
 img {
   // object-fit: cover;
   // aspect-ratio: 1;
-  image-rendering: optimizeQuality;
+  z-index: 1 !important;
   border-radius: 2rem;
   cursor: pointer;
   @media (max-width: 608px) {
