--- a/src/app/components/shopping-cart-items/shopping-cart-items.component.scss
+++ b/src/app/components/shopping-cart-items/shopping-cart-items.component.scss
@@ -87,3 +87,7 @@ img {
 body {
   overflow: hidden !important;
 }
+
+* {
+  z-index: 1000;
+}
