--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,7 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+app-shoping-card-items {
+  z-index: 1000;
+}
